新增了获取和修改用户昵称头像的接口
